--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-"hello world" 
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
+    <script src="./script.js" defer></script>
+    <title>Document</title>
+  </head>
+  <body>
+    <h1 class="title">Hello GitHub Pages!!!!</h1>
+  </body>
+</html>
