add my first webpage

--- a/random-stuff.html
+++ b/random-stuff.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
-    <link rel="stylesheet" href="./styles/index.css" />
+    <title>Random Stuff</title>
+    <link rel="stylesheet" href="./styles/random-stuff.css" />
     <link rel="stylesheet" href="./styles/general.css" />
-    <script src="./scripts/index.js" defer></script>
+    <script src="./scripts/random-stuff.js" defer></script>
   </head>
   <body>
     <header>
@@ -16,17 +16,12 @@
           src="https://cdn.discordapp.com/attachments/297434859897487372/764266945859813406/ClubPenguin_PRETO.png"
           alt=""
       /></a>
-      <h1 class="title">Home</h1>
-      <nav>
-        <ul class="nav__link">
-          <li><a href="#">Home</a></li>
-          <li><a href="./random-stuff.html">Random Stuff</a></li>
-          <li><a href="#">Porfolio</a></li>
-        </ul>
-      </nav>
+      <h1 class="title">Random Stuff</h1>
+      <ul class="nav__link">
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./random-stuff.html">Random Stuff</a></li>
+        <li><a href="#">Porfolio</a></li>
+      </ul>
     </header>
-    <section class="index-body">
-      <h2>Oi, eu sou o Thoni.</h2>
-    </section>
   </body>
 </html>
