--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
           src="https://cdn.discordapp.com/attachments/297434859897487372/764266945859813406/ClubPenguin_PRETO.png"
           alt=""
       /></a>
-      <h1 class="title">Home</h1>
+
+      <div class="temp">
+        <h1 class="title">Home</h1>
+      </div>
+
       <nav>
         <ul class="nav__link">
           <li><a href="#">Home</a></li>
@@ -26,7 +30,16 @@
       </nav>
     </header>
     <section class="index-body">
-      <h2>Oi, eu sou o Thoni.</h2>
+      <h2>Oi, este é o Galileu.</h2>
+      <img
+        class="birb"
+        src="./imgs/WhatsApp Image 2020-10-26 at 9.45.57 PM.jpeg"
+        alt="Galileu em oleo, 1940"
+      />
+      <h2>E eu, o Thoni.</h2>
+    </section>
+    <section class="welcome">
+      <h2>Sejam bem-vindos a essa maravilhosa bosta que eu criei!</h2>
     </section>
   </body>
 </html>
