--- a/random-stuff.html
+++ b/random-stuff.html
@@ -16,7 +16,9 @@
           src="https://cdn.discordapp.com/attachments/297434859897487372/764266945859813406/ClubPenguin_PRETO.png"
           alt=""
       /></a>
-      <h1 class="title">Random Stuff</h1>
+      <div class="temp">
+        <h1 class="title">Random Stuff</h1>
+      </div>
       <ul class="nav__link">
         <li><a href="./index.html">Home</a></li>
         <li><a href="./random-stuff.html">Random Stuff</a></li>
