Test version w/ hamburguer menu

--- a/index.html
+++ b/index.html
@@ -10,24 +10,30 @@
   </head>
   <body>
     <header>
-      <a href="./index.html" class="logo"
-        ><img
-          class="penguin-logo"
-          src="https://cdn.discordapp.com/attachments/297434859897487372/764266945859813406/ClubPenguin_PRETO.png"
-          alt=""
-      /></a>
-
-      <div class="temp">
-        <h1 class="title">Home</h1>
-      </div>
-
-      <nav>
+      <div class="random-page">
         <ul class="nav__link">
           <li><a href="#">Home</a></li>
           <li><a href="./random-stuff.html">Random Stuff</a></li>
           <li><a href="#">Porfolio</a></li>
         </ul>
-      </nav>
+      </div>
+      <img src="./imgs/navlist-icon.svg" class="nav-icon">
+      <div class="temp">
+        <h1 class="title">Home</h1>
+      </div>
+
+      <!-- <nav>
+        <ul class="nav__link">
+          <li><a href="#">Home</a></li>
+          <li><a href="./random-stuff.html">Random Stuff</a></li>
+          <li><a href="#">Porfolio</a></li>
+        </ul>
+      </nav> -->
+      <img
+      class="penguin-logo"
+      src="https://cdn.discordapp.com/attachments/297434859897487372/764266945859813406/ClubPenguin_PRETO.png"
+      alt=""
+  /></a>
     </header>
     <section class="index-body">
       <h2>Oi, este é o Galileu.</h2>
@@ -37,9 +43,8 @@
         alt="Galileu em oleo, 1940"
       />
       <h2>E eu, o Thoni.</h2>
+    
     </section>
-    <section class="welcome">
-      <h2>Sejam bem-vindos a essa maravilhosa bosta que eu criei!</h2>
-    </section>
-  </body>
+    <section class="welcome">  <h2>Sejam bem-vindos a essa maravilhosa bosta que eu criei!</h2></section>
+  </body> 
 </html>
