add a lot of things

--- a/random-stuff.html
+++ b/random-stuff.html
@@ -25,5 +25,34 @@
         <li><a href="#">Porfolio</a></li>
       </ul>
     </header>
+    <section class="random-stuff-body">
+      <h2 class="texts">
+        As you can see, I have some of my projects in display. They do need some
+        improvements, but that's why I'm building this website, so I can boost
+        my web dev skills. Hope you enjoy it :)
+      </h2>
+    </section>
+    <!-- <main class="webapps">
+      <div class="projetcs">
+        <img src="./imgs/weather-app.png" class="webapps-img" />
+        <div class="webapps-text">
+          <p>Hey, I'm a text!</p>
+        </div>
+      </div>
+    </main> -->
+    <section class="webapps-main">
+      <div class="webapps-container">
+        <a href="./webapps/Weather APP/index.html" class="webapps-link"
+          ><h1 class="webapps-title">Weather app</h1></a
+        >
+
+        <img src="/imgs/weather-app.png" class="webapps-img" />
+        <p class="webapps-text">This is a weather web application!</p>
+      </div>
+      <!-- <div class="webapps-container">
+        <img src="/imgs/weather-app.png" class="webapps-img" />
+        <p class="webapps-text"></p>
+      </div> -->
+    </section>
   </body>
 </html>
